--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -48,7 +48,7 @@ main{
     }
 
     .header .photo{
-        width: 270px;
-        height: 270px;
+        width: 270px !important;
+        height: 270px !important;
     }
 }
