--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -40,7 +40,7 @@
 
 .information i{
     margin-right: .4rem;
-    color: #4f1388;
+    color: #9321ff;
 }
 
 @media screen and (min-width: 768px) {
