change styles / add cv

--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -9,8 +9,8 @@
 
 .acordeon.open,
 .acordeon:hover{
-    background-color: #4f1388;
-    border-color: #4f1388;
+    background-color: #9421ff28;
+    border-color: #9421ff28;
 }
 
 .acordeon .trigger{
